--- a/404.html
+++ b/404.html
@@ -20,5 +20,5 @@ layout: base
   <h1>404</h1>
 
   <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><q></q>If there's a blog post that you want to read, but it hasn't been written yet, then you must write it.</q></p>
 </div>
