--- a/404.html
+++ b/404.html
@@ -19,6 +19,6 @@ layout: base
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p><q></q>If there's a blog post that you want to read, but it hasn't been written yet, then you must write it.</q></p>
+  <p><strong>Post not found</strong></p>
+  <blockquote><q>"If there's a blog post that you want to read, but it hasn't been written yet, then you must write it."</q></blockquote>
 </div>
